Partial cleanup style code...